--- a/vignettes/_sporeg_workflow.Rmd
+++ b/vignettes/_sporeg_workflow.Rmd
@@ -59,7 +59,6 @@ library(pathroutr)
 library(parallel)
 library(geosphere)
 library(mapview)
-library(oceanmap)
 library(car)
 ```
 
@@ -83,6 +82,7 @@ Get the release site.
 
 load(system.file("extdata", "rel_site.Rda", 
                             package = "sporeg"))
+
 ```
 
 ## Create the objects required for summarizing distribution information
@@ -148,7 +148,7 @@ For simulating tracks:
 #| include: true
 
 # Number of animals
-anims <- 3
+anims <- 1
 # Number of years
 yr <- 1       
 # Turning angle - standard deviation of body flexion from blacktip kinematics study
@@ -178,7 +178,7 @@ For the iterations:
 #| label: parallel-params
 #| include: true
 
-total_iterations <- 10 # Total number of iterations desired
+total_iterations <- 2 # Total number of iterations desired
 reps <- 2 # Number of replicates that will result in desired iterations given reps
 runs <- 1:(total_iterations/reps) # Interval at which outputs should be written to file
 ```
@@ -236,7 +236,7 @@ Let's create an output file where our results will go. We only want to create th
 # results <- list()
 
 # Assign the filename
-filename <- "results.Rdata"
+filename <- "results.Rda"
 
 # Save the empty list object to the filename
 # save(results, file = filename)
@@ -285,13 +285,13 @@ base::replicate(n = reps, expr = {
     }
     )
     # Load the previous results
-    load(system.file("data", filename, package = "sporeg")) 
+    load(system.file("extdata", filename, package = "sporeg")) 
     
     # Append the new results to the previous results
     results <- append(results, iterated_results)
     
     # Overwrite the results with both the new and previous results combined
-    save(results, file = system.file("data", filename, package = "sporeg"))
+    save(results, file = system.file("extdata", filename, package = "sporeg"))
     
     # Clear cache
     gc()
@@ -322,7 +322,7 @@ First, let's load the results.
 #| label: view-results
 #| include: true
 
-load(system.file("data", filename, package = "sporeg")) 
+load(system.file("extdata", filename, package = "sporeg")) 
 ```
 
 Hmm... these are hard to look at. Let's turn them into a data frame instead.
@@ -347,7 +347,7 @@ Remove any cases where both `sim_count` and `mod_count` were zero for all iterat
 #| include: true
 
 results <- results %>%
-  left_join(tibble(resolution = 1:4, 
+  dplyr::left_join(dplyr::tibble(resolution = 1:4, 
                    res_name = c("100km", "50km", "25km", "10km")), 
             by = "resolution") 
 ```
@@ -783,7 +783,7 @@ Merge the results to these grid cell metadata and determine which grid cells exh
 results <- results %>%
   mutate(g_fit = ifelse(avg_dif>= -1*0.1*anims & avg_dif <= 0.1*anims, 1, 0))
 
-HS_100km_grid <- merge(results %>% dplyr::filter(res_name == "100km"), HS_100km_grid, by = c("gid")) %>%
+HS_100km_grid <- merge(results %>% dplyr::filter(res_name == "100km"), HS_100km_grid, by = c("gid")) %>% 
   sf::st_as_sf() 
 
 HS_50km_grid <- merge(results %>% dplyr::filter(res_name == "50km"), HS_50km_grid, by = c("gid")) %>%
@@ -813,7 +813,7 @@ mapview::mapView(HS_10km_grid)
 
 ## Map the results
 
-Let's marry our results to a sf object that lacks a false origin so that we can more easily map them. 
+Let's marry our results to a sf object that lacks a false origin so that we can more easily map them.
 
 ```{r}
 #| label: results-sfmaps
@@ -831,7 +831,7 @@ HS25km <- grid_res(25, study_site, 3857, "polygons")
 HS10km <- grid_res(10, study_site, 3857, "polygons")
 
 # Merge results data to new geometries
-HS100km <- merge((HS_100km_grid %>% as.data.frame() %>% dplyr::select(-x)), HS100km, by = c("gid")) %>%
+HS100km <- merge((HS_100km_grid %>% as.data.frame() %>% dplyr::select(-x)), HS100km, by = c("gid")) %>% 
   sf::st_as_sf() 
 
 HS50km <- merge((HS_50km_grid %>% as.data.frame() %>% dplyr::select(-x)), HS50km, by = c("gid")) %>%
@@ -850,7 +850,7 @@ We want to create a model to understand which variables affect a good fit in the
 
 ## Create a dummy model
 
-We need to check for colinearity between main effects to see if we need to include any interaction terms between main effects in the model.
+We need to check for multicollinearity between main effects to see if we need to include any interaction terms between main effects in the model.
 
 ```{r}
 #| label: vif
@@ -1053,7 +1053,7 @@ rcv_chars <- lapply(res, rcv_chr) %>%
 
 ## What if we had chosen a different depth cutoff?
 
-Blacktip sharks, the species chosen to demonstrate the current methods, is known to rarely cross the Gulf Stream, which is in deep waters. However, in a mark and recapture study, this species was not caught in a location with a depth greater than 265 m. If we cut off our study to 300 m, how do our results change?
+Blacktip sharks, the species chosen to demonstrate the current methods, is known to cross the Gulf Stream, which is in deep waters, on occasion. However, in a mark and recapture study, this species was not caught in a location with a depth greater than 265 m. If we cut off our study to 300 m, how do our results change?
 
 ```{r}
 
